--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,10 @@
+# @format
+
 name: dg_asmt_peter
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -51,8 +53,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-  - assets/icons/
-  - assets/images/
+  assets:
+    - assets/icons/
+    - assets/images/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
